// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Course component with prerequisites 1`] = `
<a
  className="Course"
  href="Link to course"
>
  <h3>
    Name of course
  </h3>
  <p
    className="Course__school"
  >
    School: 
    <mark>
      School
    </mark>
  </p>
  <p
    className="Course__duration"
  >
    Duration: 
    <mark>
      Duration
       weeks
    </mark>
  </p>
  <p
    className="Course__effort"
  >
    Effort: 
    <mark>
      Effort
       hours/week
    </mark>
  </p>
  <p
    className="Course__frequency"
  >
    Frequency: 
    <mark>
      Frequency
    </mark>
  </p>
  <div
    className="Course__prerequisites"
  >
    Prereq
    s
    :
    <mark>
      Prerequisite 1
    </mark>
    <mark>
      Prerequisite 2
    </mark>
  </div>
</a>
`;

exports[`Render Course component without prerequisites 1`] = `
<a
  className="Course"
  href="Link to course"
>
  <h3>
    Name of course
  </h3>
  <p
    className="Course__school"
  >
    School: 
    <mark>
      School
    </mark>
  </p>
  <p
    className="Course__duration"
  >
    Duration: 
    <mark>
      Duration
       weeks
    </mark>
  </p>
  <p
    className="Course__effort"
  >
    Effort: 
    <mark>
      Effort
       hours/week
    </mark>
  </p>
  <p
    className="Course__frequency"
  >
    Frequency: 
    <mark>
      Frequency
    </mark>
  </p>
</a>
`;
